orsys/mmd première version terminé.

--- a/orsys/mmd/j1/about.tex
+++ b/orsys/mmd/j1/about.tex
@@ -38,7 +38,7 @@
   \frametitle{Emploi du temps}
   \begin{itemize}
   \item 3 jours de 9h à 12h30 et de 14h à 17h30
-  \item Le dernier jour, à 17h on commence à remplir les documents administratifs.
+  \item Le dernier jour, à 17h00 on commence à remplir les documents administratifs.
   \end{itemize}
 \end{frame}
 
