--- a/orsys/mmd/j2/supervised/derivation-gradient.tex
+++ b/orsys/mmd/j2/supervised/derivation-gradient.tex
@@ -29,8 +29,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Gradient et mise à jour}
-  initialisation au hasard ( $\gamma$ = 0.01 )
+  \frametitle{Initialisation au hasard ( $\gamma$ = 0.01 )}
   \begin{itemize}
   \item a = 0.58 ($\hat{a} = 3.0$)
   \item b = 0.25 ($\hat{b} = 0.5$)
