--- a/orsys/mmd/j1/natural-language-processing/tp-text-features-engineering.tex
+++ b/orsys/mmd/j1/natural-language-processing/tp-text-features-engineering.tex
@@ -1,43 +1,20 @@
-\subsection{Travaux Pratiques --- Apprentissage Surpervisé}
-
 \begin{frame}
-  \frametitle{Régression Linéaire}
+  \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1CAkh09NmO-smYF9h3C5AA_69CZ9d7sTq}{Regression Linéaire - TP}
+    \bluelink{https://drive.google.com/open?id=1a44THAYDDkNJXsPsUQTAi1XaZYnFJER5}{Analyse de texte - Spacy}
   \end{center}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Régression Polynomiale}
+  \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1kNg2Bc4qBWt1q_SGSmw-zvLNG5FiQJYz}{Régression Polynomiale - Tutoriel}
+    \bluelink{https://drive.google.com/open?id=1o5UYCkc7CQFN45kH1y3vEMba7ojFQ6cA}{Utilisation de TF-IDF et LSA}
   \end{center}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Régression Logistique}
+  \frametitle{Traitement de données textuelles}
   \begin{center}
-    \bluelink{https://drive.google.com/open?id=1n0fw_WMFTHjK0NwwVOzUnV31keNx6Sng}{Regression Logistique - TP}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{SVM}
-  \begin{center}
-    \bluelink{https://drive.google.com/open?id=1qbf95qZj0rW0cSzfIXUDHGwe0KrTOe8f}{SVM Tutoriel}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Random Forest}
-  \begin{center}
-    \bluelink{https://drive.google.com/open?id=1zVDe4ZdTZngGHFtI1c7Ky52WTJDWLTv2}{Random Forest - Tutoriel}
-  \end{center}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Random Forest}
-  \begin{center}
-    \bluelink{https://drive.google.com/open?id=1ooL-E238TCsFQURfnKGY9uqjyXqRqySl}{Random Forest - TP}
+    \bluelink{https://drive.google.com/open?id=1oshKbI0PQVk2VgubEmY7p7N5OH3hdEN3}{Utilisation de WordEmbeddings}
   \end{center}
 \end{frame}
