--- a/orsys/mmd/j1/natural-language-processing/tp-text-reco-system.tex
+++ b/orsys/mmd/j1/natural-language-processing/tp-text-reco-system.tex
@@ -1,37 +1,6 @@
 \begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-
-  \imgtw[0.1]{logo_mlweek}
-  
-  \begin{itemize}
-  \item 
-  \item 
-  \item 
-  \item 
-  \end{itemize}
-
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
-  \begin{minipage}[l]{0.49\linewidth}
-      \begin{itemize}
-      \item 
-      \item 
-      \item 
-      \item 
-      \end{itemize}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
+  \frametitle{Travaux Pratiques}
+  \begin{center}
+    \bluelink{https://drive.google.com/open?id=19q2dtXfCy5R9HHjIi-pMUQQcqYvYKv81}{TP - Système de recommandation - Texte}
+  \end{center}
 \end{frame}
