--- a/orsys/mmd/j1/natural-language-processing/tp-text-regex.tex
+++ b/orsys/mmd/j1/natural-language-processing/tp-text-regex.tex
@@ -1,37 +1,6 @@
 \begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-
-  \imgtw[0.1]{logo_mlweek}
-  
-  \begin{itemize}
-  \item 
-  \item 
-  \item 
-  \item 
-  \end{itemize}
-
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
-  \begin{minipage}[l]{0.49\linewidth}
-      \begin{itemize}
-      \item 
-      \item 
-      \item 
-      \item 
-      \end{itemize}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
+  \frametitle{Travaux Pratiques}
+  \begin{center}
+    \bluelink{https://drive.google.com/open?id=1F6YIOLStESGcIu_fat_xePp1TXDN0Wv1}{TP - Expression Régulières}
+  \end{center}
 \end{frame}
