--- a/orsys/mmd/j3/neural-networks/rnn-keras.tex
+++ b/orsys/mmd/j3/neural-networks/rnn-keras.tex
@@ -1,25 +1,20 @@
 \begin{frame}
   \frametitle{RNN avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-rnn.txt}
+  \mintedpy{tf-keras/rnn}
 \end{frame}
 
 \begin{frame}
   \frametitle{LSTM avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-lstm.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-lstm.txt}
+  \mintedpy{tf-keras/lstm}
 \end{frame}
 
 \begin{frame}
   \frametitle{GRU avec Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-gru.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-gru.txt}
+  \mintedpy{tf-keras/gru}
 \end{frame}
 
 \begin{frame}
   \frametitle{Deep Encoder avec Keras}
-  On peut demander à un layer récurrent à de fournir une output pour chaque timestep :
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-rnn-all-timestep.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-gru.txt}
+  \mintedpy{tf-keras/rnn-all-timestep}
 \end{frame}
 
