--- a/orsys/mmd/j3/tf-keras-intro/keras-intro.tex
+++ b/orsys/mmd/j3/tf-keras-intro/keras-intro.tex
@@ -1,7 +1,3 @@
-\subsection{Introduction à Keras}
-
-
-
 \begin{frame}
   \frametitle{Introduction à Keras}
   Keras est une API de haut niveau qui permet de prototyper des réseaux de neurones de toute sorte.
@@ -47,84 +43,81 @@
 
 \begin{frame}
   \frametitle{Réseau de neurones en Keras}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-mlp.py}
+  \mintedpycode{tf-keras/mlp}
 \end{frame}
 
 \begin{frame}
   \frametitle{Options de configuration des Layers}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-configurelayer.py}
+  \mintedpycode{tf-keras/configurelayer}
 \end{frame}
 
 \begin{frame}
   \frametitle{Optimiseur, Loss et Métrique d'évaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-compile.py}
+  \mintedpycode{tf-keras/compile}
 \end{frame}
 
 \begin{frame}
   \frametitle{Affichage du modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-print-model.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{python}{code/tf-keras-print-model.txt}
+  \mintedpy{tf-keras/print-model}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-1.py}
+  \mintedpycode{tf-keras/learn-1}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-2.py}
+  \mintedpycode{tf-keras/learn-2}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-3.py}
+  \mintedpycode{tf-keras/learn-3}
 \end{frame}
 
 \begin{frame}
   \frametitle{Apprentissage}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-learn-4.py}
+  \mintedpycode{tf-keras/learn-4}
 \end{frame}
 
 \begin{frame}
   \frametitle{Evaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-evaluate.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-keras-evaluate.txt}
+  \mintedpy{tf-keras/evaluate}
 \end{frame}
 
 \begin{frame}
   \frametitle{Evaluation}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-predict.py}
-  \inputminted[linenos,fontsize=\small,bgcolor=returnbg]{text}{code/tf-keras-predict.txt}
+  \mintedpy{tf-keras/predict}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde de la configuration d'un modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-config.py}
+  \mintedpycode{tf-keras/save-config}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde des poids d'un modèle}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-weights.py}
+  \mintedpycode{tf-keras/save-weights}
 \end{frame}
 
 \begin{frame}
   \frametitle{Sauvegarde d'un modèle complet}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-save-all.py}
+  \mintedpycode{tf-keras/save-all}
 \end{frame}
 
 \begin{frame}
   \frametitle{Callbacks}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-callbacks.py}
+  \mintedpycode{tf-keras/callbacks}
 \end{frame}
 
 \begin{frame}
   \frametitle{Création d'un Layer}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-custom-layer.py}
+  \mintedpycode{tf-keras/custom-layer}
 \end{frame}
 
 \begin{frame}
   \frametitle{Utilisation de notre nouveau Layer}
-  \inputminted[linenos,fontsize=\small,bgcolor=pythonbg]{python}{code/tf-keras-custom-layer-use.py}
+  \mintedpycode{tf-keras/custom-layer-use}
 \end{frame}
 
