changement des extention .out en .output dans code-illustration/ et formation.cls afin d'éviter la confusion avec du merdier .gitignoré

--- a/formation.cls
+++ b/formation.cls
@@ -152,7 +152,7 @@
 \newcommand{\mintedpy}[1]{%
   \inputminted[fontsize=\footnotesize,bgcolor=pythonbg,framesep=1mm]{python}{code/#1.py}%
   \vspace{-1cm}%
-  \inputminted[fontsize=\footnotesize,bgcolor=returnbg,framesep=1mm]{python}{code/#1.out}%
+  \inputminted[fontsize=\footnotesize,bgcolor=returnbg,framesep=1mm]{python}{code/#1.output}%
 }
 
 \newcommand{\mintedpycode}[1]{%
