Use shared machine-learning and improve it
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/machine-learning/apprentissage.tex
+++ b/shared/latex/machine-learning/apprentissage.tex
@@ -1,19 +1,18 @@
 \begin{frame}
-  \frametitle{Apprentissage de modèles}
+  \frametitle{Qualité de l'apprentissage}
   Entrainement supervisé d'un modèle — overfit
   \imgtw{fit}
   \red{Problème : trop minimiser la perte n'est pas bon !}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage de modèles}
+  \frametitle{Qualité de l'apprentissage}
   \imgtw[.6]{learning-curve}
   → Minimiser la perte sur un ensemble de validation
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage de modèles}
-  Séparation des données :
+  \frametitle{Séparation des données}
   \begin{itemize}
   \item ensemble d'entrainement
   \item ensemble de validation pour mesurer la généralisation
@@ -23,10 +22,9 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage de modèles}
-  Idéalement : Cross Validation
+  \frametitle{Cross-validation}
   Pour \og perdre\fg{} moins de données et mieux tester la
-  généralisation, cross-validation :
+  généralisation :
   \imgtw[.9]{cv}
   Ici, 4-fold cross-validation.
 \end{frame}
