--- a/shared/latex/machine-learning/data-preparation.tex
+++ b/shared/latex/machine-learning/data-preparation.tex
@@ -195,7 +195,7 @@
   \item visualiser des corrélations linéaires
   \end{itemize}
   Les outils suivants sont sauf mention contraire présents dans
-  \href{https://seaborn.pydata.org/}{\texttt{seaborn}}.
+  \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}.
 \end{frame}
 
 \begin{frame}
@@ -211,11 +211,11 @@
 \begin{frame}
   \frametitle{Outils — qq plot}
   \imgtw{qqplot}
-  Attention, pas \href{https://seaborn.pydata.org/}{\texttt{seaborn}}
+  Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
-  \href{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
+  \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
   ou
-  \href{https://docs.scipy.org/doc/scipy/reference/stats.html}{\texttt{scipy.stats}}.
+  \bluelink{https://docs.scipy.org/doc/scipy/reference/stats.html}{\texttt{scipy.stats}}.
 \end{frame}
 
 \begin{frame}
@@ -225,7 +225,7 @@
 
 \begin{frame}
   \frametitle{Outils — scatter plot}
-  \imgtw[.6]{scatter}
+  \imgtw[.7]{scatter}
 \end{frame}
 
 \begin{frame}
@@ -235,12 +235,12 @@
 
 \begin{frame}
   \frametitle{Outils — pair plot}
-  \imgtw[.7]{pairplot}
+  \imgtw[.65]{pairplot}
 \end{frame}
 
 \begin{frame}
   \frametitle{Outils — correlation matrix}
-  \imgtw[.7]{corrmat}
+  \imgtw[.8]{corrmat}
 \end{frame}
 
 \begin{frame}
