--- a/shared/latex/machine-learning/evaluation.tex
+++ b/shared/latex/machine-learning/evaluation.tex
@@ -1,5 +1,5 @@
 \begin{frame}
-  \frametitle{Évaluation — outils — précision, rappel}
+  \frametitle{Précision, rappel}
   En classification :
   \begin{description}
   \item[Précision]
@@ -16,21 +16,21 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Évaluation — outils — précision, rappel}
+  \frametitle{Précision, rappel}
   \imgth[0.8]{precisionrecall}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outils — courbe ROC}
+  \frametitle{Courbe ROC}
   \imgtw[.6]{roc}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Outils — courbe ROC}
+  \frametitle{Analyse d'une courbe ROC}
   \imgtw[.6]{roc-space}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Évaluation — outils — matrice de confusion}
+  \frametitle{Matrice de confusion}
   \imgtw[.6]{confusion-matrix}
 \end{frame}
