--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -48,6 +48,18 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Apprentissage par Renforcement}
+  Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
+  \vfill
+  \begin{minipage}[l]{0.39\linewidth}
+    \imgtw[0.8]{echec}
+  \end{minipage}
+  \begin{minipage}[l]{0.59\linewidth}
+    \imgtw[0.75]{darpa-urban-challenge}
+  \end{minipage}
+\end{frame}
+
+\begin{frame}
   \frametitle{Exemple: Régression linéaire}
   Prédire une valeur en fonction d'une autre
 
@@ -68,23 +80,16 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Exemple : Réseaux à convolutions (Classification)}
+  \frametitle{Exemple : Classification avec des réseaux à convolutions}
   \imgtw[0.8]{caltech256}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Apprentissage par Renforcement}
-  Apprendre une \textbf{stratégie} efficace dans un \textbf{univers} où les \textbf{actions} fournissent des \textbf{récompenses} (possiblement négatives)
-  \vfill
-  \begin{minipage}[l]{0.39\linewidth}
-    \imgtw[0.8]{echec}
-  \end{minipage}
-  \begin{minipage}[l]{0.59\linewidth}
-    \imgtw[0.75]{darpa-urban-challenge}
-  \end{minipage}
+  \frametitle{Exemple : Apprentissage par renforcement}
+  \imgtw[0.8]{alphazero}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Machine Learning}
+  \frametitle{Topologie du domaine}
   \imgtw[0.8]{ml-illustration}
 \end{frame}
