final version eni/ml-5j

--- a/shared/latex/machine-learning/intro.tex
+++ b/shared/latex/machine-learning/intro.tex
@@ -93,3 +93,54 @@
   \frametitle{Topologie du domaine}
   \imgtw[0.8]{ml-illustration}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Points de vue}
+  Beaucoup de façons de voir le machine learning. Basées sur :
+  \begin{itemize}[<+->]
+  \item les paradigmes (supervisé, non supervisé, renforcement, en
+    ligne, …)
+  \item les modèles (arbres, grammaires, automates, réseaux de
+    neurones …)
+  \item les données (tabulaire, image, texte, vidéo, graphe, …)
+  \item les techniques (statistiques, symboliques, probabilistes, …)
+  \item les contraintes (real time, embarqué, big data, multilingue,
+    …)
+  \end{itemize}
+
+  \onslide<+->{→ Domaine \textbf{extrêmement} vaste.}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Choisir la bonne facette}
+  Critères pour s'orienter dans les approches de machine learning:
+  \begin{itemize}[<+->]
+  \item quantité de données à disposition
+  \item qualité du signal d'apprentissage dans les données
+  \item difficulté du problème à résoudre
+  \item besoin d'interprétabilité
+  \item contraintes techniques
+  \item contraintes de délai
+  \item … et d'autres en fonction des domaines métiers
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Conclusion}
+  \begin{itemize}
+  \item le machine learning est un champ vaste.
+  \item il existe sûrement un modèle/paradigme pour vos besoins
+  \item l'important est de définir les bons critères
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Discussion}
+  \begin{itemize}
+  \item à quelles données allez-vous appliquer le machine learning ? À
+    quels besoins ?
+  \item aurez-vous besoin de modèles interprétables ou simplement très
+    performant en prédiction ?
+  \item quelles sont vos contraintes ?
+  \end{itemize}
+\end{frame}
