nlp minor changes

--- a/shared/latex/natural-language-processing/pattern.tex
+++ b/shared/latex/natural-language-processing/pattern.tex
@@ -1,8 +1,8 @@
 \begin{frame}
   \frametitle{Introduction}
-  Caputre et manipulation de chaînes de caractères par le biais de motifs génériques. \\
+  Capture et manipulation de chaînes de caractères par le biais de motifs génériques. \\
   \newline
-  Exemple : Rajouter un espace après chaque ponctuation (si il n'y en as pas déjà) \\
+  Exemple : Rajouter un espace après chaque ponctuation (si il n'y en a pas déjà) \\
   \newline
   "Le chat mange,délicatement, ses croquettes.Jean est attendri." \\
   $\rightarrow$ \\
