add bayesian section in supervised

--- a/shared/latex/supervised/modeles-graphiques.tex
+++ b/shared/latex/supervised/modeles-graphiques.tex
@@ -1,37 +1,9 @@
 \begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-\end{frame}
-
-\begin{frame}
-  \frametitle{template}
-
-  \imgtw[0.1]{logo_mlweek}
-  
+  \frametitle{Modéles graphiques}
+  Utilisation de graphes orientés pour représenter les dépendances entre les variables :
   \begin{itemize}
-  \item 
-  \item 
-  \item 
-  \item 
+  \item Noeuds $\Leftrightarrow$ Variables
+  \item Arcs $\Leftrightarrow$ Probabilités conditionnelles
   \end{itemize}
-
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
-  \begin{minipage}[l]{0.49\linewidth}
-      \begin{itemize}
-      \item 
-      \item 
-      \item 
-      \item 
-      \end{itemize}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-  \end{minipage}\hfill
-
+  \imgth[0.5]{graph-oriented}
 \end{frame}
