--- a/shared/latex/sequential-data/hmm.tex
+++ b/shared/latex/sequential-data/hmm.tex
@@ -2,7 +2,7 @@
   \frametitle{Hidden Markov Model}
   Un modèle de markov où les états générants les observations sont cachés \\
   Par exemple : diagnostic, capteur bruité, bourse, achats clients, ...
-  \imgth[0.7]{hmm}
+  \imgth[0.7]{hmm-model-weather}
 \end{frame}
 
 \begin{frame}
@@ -48,7 +48,7 @@
   \item Prédiction de classe : un modèle par classe
   \item Découverte de patterns
   \end{itemize}
-  \imgth[0.6]{hmm}
+  \imgth[0.6]{hmm-model-weather}
 \end{frame}
 
 \begin{frame}
@@ -59,5 +59,5 @@
   \item L'état ne dépend que de l'état précédent
   \item Algorithme EM donc très sensible à l'initialisation
   \end{itemize}
-  \imgth[0.6]{hmm}
+  \imgth[0.6]{hmm-model-weather}
 \end{frame}
