--- a/shared/latex/tp-help.tex
+++ b/shared/latex/tp-help.tex
@@ -11,8 +11,5 @@
   \newlinebar
   Un peu d'aide, mais ça ne vaudra jamais de regarder la documentation des librairies utilisées :
   \begin{center}
-  \bluelink{https://perso.limsi.fr/pointal/_media/python:cours:mementopython3-english.pdf}{python-help} \\
-  \bluelink{https://github.com/pandas-dev/pandas/blob/master/doc/cheatsheet/Pandas_Cheat_Sheet.pdf}{pandas-help} \\
-  \bluelink{https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python_Matplotlib_Cheat_Sheet.pdf}{matplotlib-help}
-  \end{center}
+  \bluelink{https://www.utc.fr/~jlaforet/Suppl/python-cheatsheets.pdf}{Compilation de CheatSheet} \\
 \end{frame}
