coquillettes dans nlp

--- a/shared/latex/natural-language-processing/vectors.tex
+++ b/shared/latex/natural-language-processing/vectors.tex
@@ -20,11 +20,12 @@
 
 \begin{frame}
   \frametitle{TF-IDF}
-  Utilisation de N-gram de mots ou de caractères. \\
-  \newline
-  Ex : ``Le chien mange de la viande''\\
-  Dictionnaire 2-gram de mots : \\
-  \newline
+  Utilisation de N-gram de mots ou de caractères.
+  \begin{center}
+  Ex : "Le chien mange de la viande"
+  \end{center}
+  $ $\\
+  Dictionnaire 2-gram de mots : 
   \begin{itemize}
   \item {[le-chien,chien-mange,mange-de,de-la,la-viande]}
   \end{itemize}
