Clean about section
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/about/description-dpl.tex
+++ b/shared/latex/about/description-dpl.tex
@@ -1,26 +1,22 @@
 
-\begin{frame}
-  \frametitle{Votre formation — description}
-  Cette formation présente les \textbf{fondamentaux} du \textbf{deep learning} à travers des travaux pratiques. \\
+\begin{frame}{Description}
+  Cette formation présente les \textbf{fondamentaux} du \textbf{deep learning} à travers des travaux pratiques.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — description}
+\begin{frame}{Description}
   \imgtw[0.9]{deep-meme}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — connaissances préalables}
+\begin{frame}{Prérequis}
   \begin{itemize}
-  \item Bonne connaissances du Machine Learning de ses principes de fonctionnement \textbf{théorique} comme \textbf{pratiques}. 
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \blue{\underline{\href{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}}}
+  \item Bonne connaissances du Machine Learning de ses principes de fonctionnement \textbf{théorique} comme \textbf{pratiques}
+  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — objectifs à atteindre}
+\begin{frame}{Objectifs pédagogiques}
   \begin{itemize}
-  \item Comprendre l'évolution des réseaux de neurones vers le deep learning.
+  \item Comprendre l'évolution des réseaux de neurones vers le deep learning
   \item Utiliser TensorFlow/Keras
   \item Comprendre les principes de conceptions, les outils de diagnostic et les effets des différents verrous et leviers à disposition
   \item Mettre en pratique sur des problèmes réels
