--- a/shared/latex/about/description-ml5j.tex
+++ b/shared/latex/about/description-ml5j.tex
@@ -1,17 +1,11 @@
-\begin{frame}
-  \frametitle{description}
-  Cette formation présente les \textbf{fondamentaux du machine
-    learning} ainsi que les principales \textbf{techniques utilisées
-    dans l’industrie}.
+\begin{frame}{Description}
+  Cette formation présente les \textbf{fondamentaux du machine learning} ainsi que les principales \textbf{techniques utilisées dans l’industrie}.
 \end{frame}
 
-\begin{frame}
-  \frametitle{profil des stagiaires}
-  Développeurs, ingénieurs informatiques désireux d’utiliser les
-  techniques d’apprentissage automatique pour exploiter les données à
-  leur disposition. \\
+\begin{frame}{Prérequis}
+  Développeurs, ingénieurs informatiques désireux d’utiliser les techniques d’apprentissage automatique pour exploiter les données à leur disposition.\\
   \newline
-  Bon niveau général en informatique, à l’aise en programmation. \\
+  Bon niveau général en informatique, à l’aise en programmation.\\
   \begin{center}
     \green{Avez-vous un compte google ?}\\
     $\;$\\
@@ -19,22 +13,17 @@
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{objectifs à atteindre}
-
+\begin{frame}{Objectifs pédagogiques}
   \begin{itemize}
-  \item poser un problème de machine learning
-  \item prétraiter des données
-  \item construire des modèles d'apprentissage pour des données
-    annotées comme non-annotées
-  \item gérer les apprentissages de vos modèles
-  \item extraire des résultats actionnables
+  \item Poser un problème de machine learning
+  \item Prétraiter des données
+  \item Construire des modèles d'apprentissage pour des données annotées comme non-annotées
+  \item Gérer les apprentissages de vos modèles
+  \item Extraire des résultats actionnables
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{programme}
-
+\begin{frame}{Programme}
   \begin{itemize}
   \item Introduction au machine learning
   \item Notions de maths
