--- a/shared/latex/about/description-mlbdnn.tex
+++ b/shared/latex/about/description-mlbdnn.tex
@@ -1,7 +1,6 @@
 
-\begin{frame}
-  \frametitle{Description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques. \\
+\begin{frame}{Description}
+  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
 \end{frame}
 
 \begin{frame}
@@ -9,7 +8,7 @@
   \begin{itemize}
   \item Connaissances de base en algèbre et statistiques
   \item Connaissances de base en python
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}
+  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
