--- a/shared/latex/about/ressources-orsys.tex
+++ b/shared/latex/about/ressources-orsys.tex
@@ -1,7 +1,4 @@
-
-\begin{frame}
-  \frametitle{Votre formation — ressources}
-  \begin{itemize}
-    \item Je vous ferai parvenir les ressources informatiques utilisées à chaque début de cours. Elles sont aussi accessibles via \blue{\underline{\href{https://myorsys.orsys.fr/}{https://myorsys.orsys.fr/}}}
-  \end{itemize}
+\begin{frame}{Ressources}
+  Je vous ferai parvenir les ressources informatiques utilisées à chaque début de cours.
+  Elles sont aussi accessibles via \bluelink{https://myorsys.orsys.fr/}{My Orsys}.
 \end{frame}
