--- a/shared/latex/about/description-bda.tex
+++ b/shared/latex/about/description-bda.tex
@@ -1,20 +1,17 @@
 
-\begin{frame}
-  \frametitle{Votre formation — description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques. \\
+\begin{frame}{Description}
+  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — connaissances préalables}
+\begin{frame}{Prérequis}
   \begin{itemize}
   \item Connaissances de base en statistiques et algèbre
   \item Connaissances de base en python
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \blue{\underline{\href{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}}}
+  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — objectifs à atteindre}
+\begin{frame}{Objectifs pédagogiques}
   \begin{itemize}
   \item Comprendre les principes de la modélisation statistique
   \item Comprendre les différents types de régressions
@@ -22,11 +19,10 @@
   \item Sélectionner et classer des données dans de grands volumes de données
   \item Se familiariser avec les librairies scientifiques python (NumPy, seaborn, sikit-learn, ... )
   \end{itemize}
-  En bref, se familiariser avec les concepts et techniques de bases du ``Machine Learning''
+  En bref, se familiariser avec les concepts et techniques de bases du \og{}Machine Learning\fg
 \end{frame}
 
-\begin{frame}
-  \frametitle{Votre formation — programme}
+\begin{frame}{Programme}
   \begin{itemize}
   \item Introduction à la modélisation
   \item Evaluation de modèles prédictifs
