--- a/shared/latex/about/description-mlb.tex
+++ b/shared/latex/about/description-mlb.tex
@@ -1,20 +1,17 @@
 
-\begin{frame}
-  \frametitle{Description}
-  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques. \\
+\begin{frame}{Description}
+  Cette formation présente les \textbf{fondamentaux} de la \textbf{Modélisation Statistique} à travers des travaux pratiques.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Prérequis}
+\begin{frame}{Prérequis}
   \begin{itemize}
   \item Connaissances de base en statistiques
   \item Connaissances de base en python
-  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google colaboratory}
+  \item Avoir un \textbf{compte Google} afin de pouvoir faire les TPs dans \bluelink{https://colab.research.google.com/notebooks/welcome.ipynb}{Google Colaboratory}
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Objectifs pédagogiques}
+\begin{frame}{Objectifs pédagogiques}
   \begin{itemize}
   \item Comprendre les différents modèles d'apprentissage
   \item Modéliser un problème pratique sous forme abstraite
@@ -24,8 +21,7 @@
   \end{itemize}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Programme}
+\begin{frame}{Programme}
   \begin{itemize}
   \item Introduction à la modélisation
   \item Evaluation de modèles prédictifs
