--- a/shared/latex/about/horaires-5j-eni.tex
+++ b/shared/latex/about/horaires-5j-eni.tex
@@ -1,22 +1,16 @@
-
-\begin{frame}
-  \frametitle{Horaires}
+\begin{frame}{Emploi du temps}
   \begin{figure}
     \centering
     \begin{tabular}{ccc}
       \toprule
-               & matin            & après-midi        \\ \midrule
-      lundi    & 9h00-12h00       & 14h00-17h30       \\
-      mardi    & 9h00-12h00       & 14h00-17h30       \\
-      mercredi & 9h00-12h00       & 14h00-17h30       \\
-      jeudi    & 9h00-12h00       & 14h00-17h30       \\
-      vendredi & 9h00-12h00       & 14h00-17h30       \\
+               & matin      & après-midi  \\
+      \midrule
+      lundi    & 9h00-12h00 & 14h00-17h30 \\
+      mardi    & 9h00-12h00 & 14h00-17h30 \\
+      mercredi & 9h00-12h00 & 14h00-17h30 \\
+      jeudi    & 9h00-12h00 & 14h00-17h30 \\
+      vendredi & 9h00-12h00 & 14h00-17h30 \\
       \bottomrule
     \end{tabular}
   \end{figure}
-\end{frame}
-
-\begin{frame}
-  \frametitle{Pauses}
-  Une pause de 10 minutes pour couper chaque demi-journée.
 \end{frame}
