--- a/shared/latex/about/ressources-eni.tex
+++ b/shared/latex/about/ressources-eni.tex
@@ -1,5 +1,3 @@
-
-\begin{frame}
-  \frametitle{~}
+\begin{frame}{Ressources}
   Les supports utilisées vous seront remis à chaque début de cours.
 \end{frame}
