--- a/shared/latex/about/tour2table.tex
+++ b/shared/latex/about/tour2table.tex
@@ -1,10 +1,10 @@
 \begin{frame}
-  \frametitle{présentez-vous}
+  \frametitle{Tour de table~: présentez-vous~!}
   \begin{itemize}
-  \item Votre nom
-  \item Votre métier
-  \item Votre société client si appliquable
-  \item Vos compétences dans les domaines liés à cette formation
-  \item Vos objectifs et vos attentes vis-à-vis de cette formation
+    \item Votre nom
+    \item Votre métier
+    \item Votre société client si appliquable
+    \item Vos compétences dans les domaines liés à cette formation
+    \item Vos objectifs et vos attentes vis-à-vis de cette formation
   \end{itemize}
 \end{frame}
