Fix missing bluelink calls except in intras and mlweek
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/mle/1/text-vectors.tex
+++ b/orsys/mle/1/text-vectors.tex
@@ -75,14 +75,10 @@
 \begin{frame}
   \frametitle{Traitement du langage : word embeddings} 
   \imgtw[0.6]{word2vec-analogy}
-  \begin{center}
-    \blue{\underline{\href{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec}}} \\
-    \blue{\underline{\href{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}}}
-  \end{center}
+  \begin{itemize}
+    \item \bluelink{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec}
+    \item \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}
+  \end{itemize}
 \end{frame}
 
 \end{document}
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% End:
