--- a/shared/latex/tools/arXiv.tex
+++ b/shared/latex/tools/arXiv.tex
@@ -5,5 +5,5 @@
 
 \begin{frame}
   \frametitle{arXiv}
-  Consultez \blue{\underline{\url{https://scholar.google.com/}}}
+  Consultez \bluelink{https://arxiv.org/}{arXiv} directement ou trouvez les papiers qui vous intéressent sur \bluelink{https://scholar.google.com/}{Google Scholar}.
 \end{frame}
