--- a/shared/latex/tp-help.tex
+++ b/shared/latex/tp-help.tex
@@ -1,7 +1,6 @@
-\begin{frame}
-  \frametitle{Fonctions utiles}
+\begin{frame}{Fonctions utiles}
   \begin{center}
-  \bluelink{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Fonctions Utiles (cliquez ici)}
+    \bluelink{https://drive.google.com/open?id=18UC6cySq3loE7S2t9-Fu_ihMT2nDeJjk}{Fonctions Utiles (cliquez ici)}
   \end{center}
   Après avoir ouvert le lien dans Colaboratory :
   \begin{center}
@@ -11,5 +10,6 @@
   \newlinebar
   Un peu d'aide, mais ça ne vaudra jamais de regarder la documentation des librairies utilisées :
   \begin{center}
-  \bluelink{https://www.utc.fr/~jlaforet/Suppl/python-cheatsheets.pdf}{Compilation de CheatSheet} \\
+    \bluelink{https://www.utc.fr/~jlaforet/Suppl/python-cheatsheets.pdf}{Compilation de CheatSheet}
+  \end{center}
 \end{frame}
