--- a/shared/latex/unsupervised/demo-anomaly-detect.tex
+++ b/shared/latex/unsupervised/demo-anomaly-detect.tex
@@ -1,8 +1,8 @@
 
 \begin{frame}
   \frametitle{Support TP : Détection d'anomalie}
-  \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{local-outlier-factor - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{isolation-forest - Tutoriel}}}
-  \end{center}
+  \begin{itemize}
+    \item \bluelink{https://drive.google.com/open?id=1-nbjcb5JCVDyDDK6DFsVpfBEKcD34X_C}{Local Outlier Factor --- Tutoriel}
+    \item \bluelink{https://drive.google.com/open?id=1EsUmo2brFdXJ1I2WVEopt3fK2y1jTYE2}{Isolation Forest --- Tutoriel}
+  \end{itemize}
 \end{frame}
