--- a/shared/latex/machine-learning/tp-data.tex
+++ b/shared/latex/machine-learning/tp-data.tex
@@ -1,8 +1,6 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-  \bluelink{https://drive.google.com/open?id=1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}
-  {Exploration de données-TP}
+    \bluelink{https://drive.google.com/open?id=1b93dMeJ1wubsVYyNkiCzg_4eaRqFgl51}{Exploration de données}
   \end{center}
 \end{frame}
-
