--- a/shared/latex/unsupervised/demo-dim-reduce.tex
+++ b/shared/latex/unsupervised/demo-dim-reduce.tex
@@ -1,8 +1,7 @@
 
-\begin{frame}
-  \frametitle{Support TP : PCA/LDA}
-  \begin{center}
-    \blue{\underline{\href{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}}}\\
-    \blue{\underline{\href{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}}}
-  \end{center}
+\begin{frame}{Support TP : PCA/LDA}
+  \begin{itemize}
+    \item \bluelink{https://drive.google.com/open?id=1n_97rd-P5Vo96QG5gFmbqqG1gRcxsehT}{PCA- iris dataset - Tutoriel}
+    \item \bluelink{https://drive.google.com/open?id=1ctaJCxSC-V94vJMJHsYsfoFag0sKQKiy}{PCA-LDA - Tutoriel}
+  \end{itemize}
 \end{frame}
