Fix mlweek case preventing mass transformation of links from drive to Colab
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/mlweek/slides/9/1-tp.tex
+++ b/mlweek/slides/9/1-tp.tex
@@ -9,14 +9,14 @@
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\href{https://colab.research.google.com/drive/1v_YaxkiUBiJC-32kz7IMX6hhVVOxxwTb}{DQN atari}}
+    \bluelink{https://colab.research.google.com/drive/1v_YaxkiUBiJC-32kz7IMX6hhVVOxxwTb}{DQN atari}
   \end{center}
 \end{frame}
 
 \begin{frame}
   \frametitle{Travaux Pratiques}
   \begin{center}
-    \blue{\href{https://drive.google.com/file/d/1x-rq_5lNh3JpJn9OMIqSYFckuavD1iSN/view?usp=sharing}{DQN atari-qui fonctionne}}
+    \bluelink{https://colab.research.google.com/drive/1x-rq_5lNh3JpJn9OMIqSYFckuavD1iSN}{DQN atari-qui fonctionne}
   \end{center}
 \end{frame}
 
